--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "dompurify": "^3.0.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "gray-matter": "^4.0.3",
+    "jsdom": "^22.1.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -27,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/dompurify": "^3.0.2"
   }
 }
